2006-05-27  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tjc/library/compileproc.tcl: Add support
        for +inline-expr flag. Implement inlined logic
        in compileproc_expr_evaluate_emit_binary_operator
        for the eq and ne expr operators.
        * src/tjc/tjc/library/module.tcl: Add support
        for +inline-expr flag.
        * tests/tclbench/expr.bench: Add tests for
        specific inlined operations.
        * tests/tjc/compileproc_2.test:
        * tests/tjc/compileproc_9.test: Add test cases
        for inlined unary and binary operators.
        * tests/tjc/module.test: Add +inline-expr tests.

2006-05-26  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ExprValue.java: Add
        a series of inlined math operations.
        These methods will be inlined in the
        Expression.evalBinaryOperator() method.
        * src/jacl/tcl/lang/Expression.java
        (evalBinaryOperator): Add implementation
        of math operators that makes use of inlined
        methods in the ExprValue. This implementation
        executes slightly faster than the previous
        implementation. Also move STREQ and STRNEQ
        operators into first switch since no operand
        validation is needed for these operators.
        * src/tjc/tcl/lang/TJC.java (exprBinaryOperator,
        exprUnaryOperator): Make arguments final.

2006-05-25  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Expression.java (ExprParseObject,
        ExprParseString): Optimize expr int and double parse
        routines by removing logic that dealt with TclBoolean
        object type. The TclBoolean class is seldom used,
        so dealing with only int and double types makes
        things more simple and it removed an instanceof op.
        * src/jacl/tcl/lang/Interp.java:
        Use shared int constants for the boolean true and
        false constants. The TclBoolean class can make use